--- a/editor/sass/header.scss
+++ b/editor/sass/header.scss
@@ -33,17 +33,19 @@ $headerMenuItemDivider: #464646;
     top: 0;
     left: 0;
     width: 100%;
-    height: 40px;
-    background: #000;
+    height: 55px;
+    background: $primary-dark-color;
     box-sizing: border-box;
-    padding: 0px 0px 0px 20px;
-    color: #C7C7C7;
+    padding: 0px;
+    color: white;
     font-size: 14px;
 }
 
-span.logo {
+div.logo {
     float: left;
-    margin-top: 5px;
+    width:180px;
+    height:55px;
+    background-color:$xively-habanero;
     font-size: 30px;
     line-height: 30px;
     text-decoration: none;
@@ -53,7 +55,7 @@ span.logo {
         font-size: 16px !important;
     }
     img {
-        height: 18px;
+        height: 55px;
     }
 
     a {
