--- a/editor/sass/style.scss
+++ b/editor/sass/style.scss
@@ -50,14 +50,14 @@
 
 body {
     font-size: 14px;
-    font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    font-family: "Tw Cen MT", Verdana, Arial, Helvetica, sans-serif;
     padding-top: 100px;
     background: #f3f3f3;
 }
 
 #main-container {
     position: absolute;
-    top:40px; left:0; bottom: 0; right:0;
+    top:55px; left:0; bottom: 0; right:0;
     overflow:hidden;
 }
 
