--- a/editor/sass/tabs.scss
+++ b/editor/sass/tabs.scss
@@ -50,8 +50,13 @@ ul.red-ui-tabs li a.red-ui-tab-label {
     padding-left: 12px;
     width: 100%;
     height: 100%;
+    color: white;
+}
+
+ul.red-ui-tabs li.active {
     color: #666;
 }
+
 ul.red-ui-tabs li {
     position: relative;
 }
@@ -102,7 +107,6 @@ ul.red-ui-tabs li a:focus {
 
 ul.red-ui-tabs li.active {
     background: $tab-background-active;
-    font-weight: bold;
     border-bottom: 1px solid #fff;
 }
 ul.red-ui-tabs li.active a {
